data/derived/comb/progs/unify/prog4585.ml.out
Characters 24-25:
  in wwhile (f,2);;
             ^
Error: This expression has type int -> int * bool
       but an expression was expected of type 'a * bool
